# StartUp-App

./: App.tsx  app.json  package-lock.json  package.json
android/: build.gradle  gradle.properties  gradlew  link-assets-manifest.json  settings.gradle
android/app/: build.gradle  startup.jks
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/startupapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: Podfile
ios/StartUpApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/StartUpApp.xcodeproj/: project.pbxproj
ios/StartUpApp.xcodeproj/xcshareddata/xcschemes/: StartUpApp.xcscheme
ios/StartUpApp.xcworkspace/: contents.xcworkspacedata
ios/StartUpAppTests/: StartUpAppTests.m
src/components/: AboutYou.tsx  Button.tsx  Captcha.tsx  ConditionsCart.tsx  Header.tsx  Input.tsx  Radio.tsx  SvgImage.tsx
src/configs/: navigation.configs.tsx
src/mock/: AboutYouMock.ts  ConditonsMock.ts
src/router/: Auth.Router.tsx  Main.Router.tsx  Router.tsx  routes.ts
src/screens/: AboutYou.Screen.tsx  AdvanceInformation.Screen.tsx  Conditions.Screen.tsx  Home.Screen.tsx  LanguagePreference.Screen.tsx  Register.Screen.tsx  SelectTravel.Screen.tsx  UserDetails.Screen.tsx  UserList.tsx  Welcome.Screen.tsx
src/theme/: colors.ts  common.styles.ts  metrics.ts
src/types/: navigation.type.ts
